feat(graph): 启用图谱搜索功能并优化相关配置
- 设置 KnowledgeSetting 中 graphEnable 默认值为 true
- 优化 EmbeddingTypeHandler 字符串解析逻辑，支持无方括号格式
- 修改 RetrieveService 强制使用 GRAPH 搜索模式
- 更新 GraphStoreImpl 使用 getFirst() 获取知识库ID
- 从 GraphRelationshipMapper.xml 移除 weight 字段查询
- 重构数据索引监听器，移除图谱提取事件发布逻辑
- 在问题生成监听器中添加图谱提取事件发布功能